# gtasa-sdk-android

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
gtasa-sdk-android/: CMakeLists.txt
gtasa-sdk-android/cmake/: sources.cmake
gtasa-sdk-android/include/: event.hpp  event_base.hpp  events.hpp  platform.hpp  sdk.hpp
gtasa-sdk-android/src/api/: context.cpp  event.cpp  events.cpp  sdk.cpp
gtasa-sdk-android/src/internal/: bootstrap.hpp  context.hpp  event_caller.hpp  memory.hpp
gtasa-sdk-android/src/runtime/: bootstrap.cpp  events_runtime.cpp  events_runtime.hpp
include/: sdk.hpp
scripts/: gensrc.py
src/api/: context.cpp  events.cpp  sdk.cpp
src/internal/: bootstrap.hpp  memory.hpp
src/runtime/: bootstrap.cpp
